# aoc2024

./: Cargo.toml  README.md
binary/: Cargo.toml
binary/src/: main.rs
day1/: Cargo.toml
day1/src/: lib.rs
day2/: Cargo.toml
day2/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
errors/: Cargo.toml
errors/src/: lib.rs
input/: test.txt
parser/: Cargo.toml
parser/src/: lib.rs
storage/: Cargo.toml
storage/src/: lib.rs
