# Advent of Code 2024 Workspace Configuration
[workspace]
resolver = "2"
members = [
  "binary",
  "domain",
  "errors",
  "day1","day2", "parser"
]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sentinel1909/aoc2024"

[workspace.dependencies]



