[package]
name = "binary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aoc2024"
path = "src/main.rs"

[dependencies]
day1 = { path = "../day1" }
day2 = { path = "../day2" }
errors = { path = "../errors" }
clap = { version = "4.5.21", features = [ "derive" ] }
